--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>docker-jenkins-demo</finalName>
+		<finalName>devops-integration</finalName>
 	</build>
 
 </project>
