--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<!--<plugin>
+			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
 				<version>3.3.2</version>
@@ -81,7 +81,7 @@
 						<image>sriharshakr1/${project.artifactId}</image>
 					</to>
 				</configuration>
-			</plugin>-->
+			</plugin>
 		</plugins>
 		<finalName>devops-integration</finalName>
 	</build>
